feat: delete a publication
