# src/routes/publications/index.ts
@@ -17,5 +17,10 @@ publicationsRoute.patch(
   upload.single('image'),
   PublicationController.update
 )
+publicationsRoute.delete(
+  '/publications/:id',
+  auth,
+  PublicationController.delete
+)
 
 export default publicationsRoute
