# src/swagger.json
@@ -338,6 +338,32 @@
         "security": [{ "bearerAuth": [] }],
         "summary": "Update a publication",
         "tags": ["Publication"]
+      },
+      "delete": {
+        "description": "Delete a publication",
+        "parameters": [
+          {
+            "example": "/publications/a53a8ac3-7c98-4480-bc2c-e308304cf0c1",
+            "description": "The publication id",
+            "in": "route",
+            "name": "id",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        },
+        "security": [{ "bearerAuth": [] }],
+        "summary": "Delete a publication",
+        "tags": ["Publication"]
       }
     },
     "/search": {
